[gd_scene load_steps=4 format=2]

[ext_resource path="res://AlgorithmScenes/Screen/u_node_is_explorer_popup.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/popup_sci-fi-theme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.201, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[node name="VNodeIsExploredPopup" type="WindowDialog"]
visible = true
margin_left = 331.0
margin_top = 199.0
margin_right = 1074.0
margin_bottom = 333.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 738.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="Explanation" type="Label" parent="VB"]
unique_name_in_owner = true
margin_right = 738.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
text = "Is the V node (index) explored?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VB"]
margin_top = 65.0
margin_right = 738.0
margin_bottom = 110.0
custom_constants/separation = 20
alignment = 1

[node name="YesButton" type="Button" parent="VB/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.121569, 0.913725, 0, 1 )
margin_left = 294.0
margin_right = 369.0
margin_bottom = 45.0
focus_neighbour_right = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../../..")
mouse_default_cursor_shape = 2
text = "Yes"

[node name="NoButton" type="Button" parent="VB/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.980392, 0.156863, 0.156863, 1 )
margin_left = 389.0
margin_right = 443.0
margin_bottom = 45.0
focus_neighbour_left = NodePath(".")
focus_next = NodePath("../../..")
focus_previous = NodePath("../YesButton")
mouse_default_cursor_shape = 2
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorNotification" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_top = 148.0
margin_right = 738.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Error: Wrong answer"
align = 1
autowrap = true

[node name="AnimPlayer" type="AnimationPlayer" parent="ErrorNotification"]
unique_name_in_owner = true
anims/message_modulation = SubResource( 1 )

[connection signal="pressed" from="VB/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="VB/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
